cabal-version:      2.4
name:               cardano-tx
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        DerivingVia
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DerivingStrategies
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: CardanoTx.Models
                     CardanoTx.Address
                     CardanoTx.ToPlutus
                     CardanoTx.Value
                     CardanoTx.Interop

    build-depends:
        mtl==2.2.2,
        plutus-chain-index==0.1.0.0,
        plutus-chain-index-core==0.1.0.0,
        plutus-ledger-constraints==0.1.0.0,
        ouroboros-consensus-cardano==0.1.0.0,
        cardano-ledger-core==0.1.0.0,
        plutus-ledger,
        plutus-tx,
        plutus-ledger-api,
        bytestring,
        aeson,
        servant,
        singletons,
        either,
        aeson-gadt-th,
        some,
        dependent-sum-template,
        containers,
        freer-simple,
        plutus-core,
        extra,
        cardano-api,
        text