cabal-version:      2.4
name:               dex-core
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        DerivingStrategies
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeOperators
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: ErgoDex.Class
                     ErgoDex.State
                     ErgoDex.Amm.Orders
                     ErgoDex.Amm.Pool
                     ErgoDex.Amm.PoolActions
                     ErgoDex.Amm.PoolSetup
                     ErgoDex.Amm.Scripts
                     ErgoDex.Amm.Constants
                     ErgoDex.Types

    build-depends:
        plutarch==1.1.0,
        cardano-tx==0.1.0.0,
        ergo-hs-common==0.1.0.0,
        plutus-ledger,
        plutus-tx,
        plutus-ledger-api,
        bytestring,
        aeson,
        servant,
        plutus-contract,
        cardano-dex-contracts,
        singletons,
        either,
        aeson-gadt-th,
        some,
        dependent-sum-template,
        containers,
        freer-simple,
        plutus-core,
        extra,
        cardano-api,
        text

test-suite dex-core-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Spec.Pool
    Spec.Redeem 
  build-depends:
    , base== 4.14.1.0
    , HUnit== 1.6.2.0
    , tasty
    , tasty-hunit
    , text== 1.2.4.1
    , base16-bytestring==1.0.1.0
    , bytestring==0.10.12.0
    , plutus-ledger-api==0.1.0.0
    , random==1.2.1
    , plutus-tx==0.1.0.0
    , cardano-dex-contracts==0.1.0.0
    , plutus-ledger-api
    , plutus-ledger
    , containers==0.6.2.1
    , random-strings
    , plutus-core
    , plutarch
    , dex-core==0.1.0.0
    , cardano-tx==0.1.0.0
