cabal-version:      2.4
name:               dex-core
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        UndecidableInstances
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        LambdaCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        LambdaCase
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: ErgoDex.Class
                     ErgoDex.Types
                     ErgoDex.Validators
                     ErgoDex.State
                     ErgoDex.Amm.Orders
                     ErgoDex.Amm.Pool
                     ErgoDex.Amm.PoolActions
                     ErgoDex.Amm.PoolSetup
                     ErgoDex.Amm.Constants
                     ErgoDex.ScriptsValidators

    build-depends:
        rio,
        cardano-tx,
        ergo-hs-common,
        plutus-ledger,
        plutus-tx,
        plutus-ledger-api,
        bytestring,
        aeson,
        servant,
        plutus-contract,
        mtl,
        cardano-dex-contracts-offchain,
        plutus-script-utils,
        singletons,
        transformers-either,
        aeson-gadt-th,
        some,
        dependent-sum-template,
        containers,
        freer-simple,
        plutus-core,
        either,
        extra,
        transformers,
        submit-api,
        cardano-api,
        text,
        serialise,
        dhall,
        hlog

test-suite dex-core-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Spec.Pool
  build-depends:
    , base
    , HUnit
    , hedgehog
    , tasty-hunit
    , tasty
    , tasty-hedgehog
    , text
    , base16-bytestring
    , bytestring
    , plutus-ledger-api
    , random
    , plutus-tx
    , cardano-dex-contracts-offchain
    , plutus-ledger-api
    , plutus-ledger
    , containers
    , random-strings
    , plutus-core
    , dex-core
    , cardano-tx
