cabal-version:      2.4
name:               network-api
version:            0.1.0.0

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        DerivingStrategies
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src

    exposed-modules: NetworkAPI.Types
                     NetworkAPI.Service
                     NetworkAPI.Config.NodeConfig
                     NetworkAPI.Node.Service

    build-depends:
        rio==0.1.21.0,
        transformers-except==0.1.2,
        serialise==0.2.3.0,
        cardano-tx==0.1.0.0,
        plutus-chain-index==0.1.0.0,
        prettyprinter==1.7.0,
        cardano-slotting==0.1.0.0,
        ouroboros-network==0.1.0.0,
        mtl==2.2.2,
        http-conduit==2.3.8,
        plutus-ledger,
        bytestring,
        aeson,
        servant,
        singletons,
        either,
        aeson-gadt-th,
        some,
        network-mux,
        dependent-sum-template,
        containers,
        freer-simple,
        extra,
        cardano-api,
        base16-bytestring,
        text,
        dhall,
        quickblue