cabal-version:      2.4
name:               network-api
version:            0.1.0.0

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        DerivingStrategies
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns
                        TypeApplications

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src

    exposed-modules: NetworkAPI.Types
                     NetworkAPI.Service

    build-depends:
        rio,
        transformers-except,
        serialise,
        cardano-tx,
        plutus-chain-index,
        prettyprinter,
        cardano-slotting,
        ouroboros-network,
        cardano-ledger-babbage,
        cardano-ledger-alonzo,
        cardano-api == 1.35.3,
        mtl,
        http-conduit,
        plutus-ledger,
        bytestring,
        aeson,
        servant,
        singletons,
        either,
        aeson-gadt-th,
        some,
        dependent-sum-template,
        containers,
        freer-simple,
        extra,
        cardano-api,
        text,
        dhall,
        quickblue,
        retry,
        hlog,
        network-mux,
        exceptions